Fixes and adjustments to canvas and BG animations
Fixed projects from being unclickable when canvas is above it
Changed size, count, and boundaries of circles
Resize canvas for moving circles when buttons are clicked
Fix circles from getting stuck offscreen when adjusting screen

--- a/script.scss
+++ b/script.scss
@@ -45,16 +45,24 @@ html {
     }
 }
 
+#canv-shield {
+    z-index: 2;
+    position: absolute;
+    top: 0; left:0;
+    width: 100%;
+    height: 50vh;
+    background-color: black;
+}
+
 #artCanvas {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 3;
     width: 100%;
     height: 50vh;
-    // border: 1px solid red;
-    background-color: black;
-    @media screen and (min-width: $tablet) {height: 70vh;}
+    background-color: rgba(0,0,0,0);
+    @media screen and (min-width: $tablet) {height: 100vh;}
 }
 
 .top {
@@ -62,7 +70,7 @@ html {
     padding-top: 28vh;
     margin: 0;
     text-align: center;
-    z-index: 2;
+    z-index: 5;
     background-color: transparent;
     #name { // Javen Porter
         font-size: min(16vw, 8rem);
@@ -124,7 +132,7 @@ html {
     width: 100%;
     margin-top: -100vh;
     position: relative;
-    z-index: 0;
+    z-index: 1;
     padding-top: 5vh;
     // padding-bottom: 0.5rem;
     // overflow-x:hidden;
@@ -318,7 +326,7 @@ html {
         animation-name: hideProjects;
         animation-duration: 0.8s;
         animation-fill-mode: both;
-        z-index: -1;
+        // z-index: -1;
     }
 }
 
